python3.install_sources(
    [
        '__init__.py',
        'GSettingsWidgets.py',
        'os.py',
        'SettingsWidgets.py'
    ],
    subdir: 'xapp'
)

# Install widgets submodule files
python3.install_sources(
    [
        'widgets/__init__.py',
        'widgets/ListEditor.py',
    ],
    subdir: 'xapp/widgets'
)
python3.install_sources(
    [
        'threading/__init__.py',
    ],
    subdir: 'xapp/threading'
)
python3.install_sources(
    [
        'util/__init__.py',
    ],
    subdir: 'xapp/util'
)